--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
       name="description"
       content="「Keep」是一款具有社交属性的健身App,超过2亿运动爱好者的选择! 无论是想减肥增肌或塑形,还是寻找健身跑步瑜伽计步等训练计划, 你可以随时随地选择课程进行训练! 权威教练视频教学,健身干货自由分享.在这里健身打卡,结识志同道合的运动好友,让运动不再是孤单的坚持!"
     />
+    <meta
+      name="keywords"
+      content="减肥,健康减肥,减肥好方法,减肥干货,燃脂,有氧运动,无氧运动,家庭健身,徒手健身,器械健身,人鱼线,马甲线,蜜桃臀,腹肌撕裂者,冥想,卡路里计算"
+    />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Keep-自律给我自由</title>
   </head>
